# OpenEdit

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_BRIEF.md  CHANGELOG.md  ORIGINAL_REQUEST.md  PROJECT_EXPLAINED.md  PyAgent.desktop  README.md  edit.sh  go.mod  info.md  open-edit-architecture.md  open_edit_architecture_plan.md  openedit.md  package-lock.json  package.json  phase4-design-revised.md  run.sh
open_edit/: README.md  pyproject.toml
open_edit/open_edit/: cli.py  pydantic_compat.py  test
open_edit/open_edit/agent/: __init__.py  allowed_libs.toml  exceptions.py  libs.py  sandbox_bridge.py  style_inject.py
open_edit/open_edit/agent/skills/: __init__.py  (+4 more)
open_edit/open_edit/ir/: api.py  apply.py  commutativity.py  hash.py  types.py  validate.py
open_edit/open_edit/qc/: __init__.py  black_frames.py  gate.py  silence.py  thumbnail.py
open_edit/open_edit/render/: __init__.py  cache.py  emitter.py  ingest.py  orchestrator.py  profiles.py  validators.py
open_edit/open_edit/serve/: __init__.py  _cli_patch.py  agent.py  app.py  cli_adapter.py  context_budget.py  cost.py  diagnostics.py  errors.py  html_overlay.py  llm.py  llm_config.py  logging_setup.py  opencode_adapter.py  pi_bridge.py  pillar_tools.py  pricing.json  project_meta.py  projects.py  providers.py  result_capper.py  schema_validator.py  serve_env.py  tool_executor.py  tool_registry.py  tool_schemas.py  visual_verify.py
open_edit/open_edit/storage/: __init__.py  assets.py  config.py  edit_graph.py  job_lock.py  notes.py  render_snapshots.py  schema.sql  transcription.py
open_edit/open_edit/style/: __init__.py  aggregate.py  retrieve.py  taste_events.py
open_edit/open_edit/tests/: test_edit_graph_append_validation.py
open_edit/plans/: plan-a-tool-schema-audit.md  plan-b-context-budget.md  plan-c-unified-context.md  plan-d-tool-redesign.md
open_edit/sandbox/: Cargo.toml
open_edit/sandbox/observations/: strace_ffmpeg.txt  strace_ffprobe.txt  strace_melt.txt
open_edit/sandbox/src/: jail.rs  main.rs  network_denylist.rs  nproc.rs  render_jail.rs  render_main.rs
open_edit/sandbox/tests/: integration.rs  render_integration.rs
open_edit/scripts/: build_timeline.py  retx_assets.py
open_edit/tests/: _node_harness.py  conftest.py  eval_scenarios.py  test_agent_loop_stability.py  test_apply_free_form.py  test_apply_purity.py  test_apply_split.py  test_asset_path_fix.py  test_challenger_empirical.py  test_cli.py  test_cli_adapter.py  test_cli_free_form.py  test_cli_notes.py  test_conftest.py  test_context_budget.py  test_conversation_sync.py  test_diagnostics.py  test_e2e.py  test_e2e_render.py  test_edit_graph_project_id.py  test_emitter.py  test_errors.py  test_free_form_e2e.py  test_free_form_exceptions.py  test_free_form_libs.py  test_health_diagnostics.py  test_history_compaction.py  test_html_overlay.py  test_huge_line_stream.py  test_ir_api.py  test_ir_validation.py  test_job_lock.py  test_keys_store.py  test_list_assets_tool.py  test_llm_config.py  test_logging_setup.py  test_long_form_e2e.py  test_migrations.py  test_opencode_adapter.py  test_pillar_headers.py  (+47 more)
open_edit/tests/test_ir/: __init__.py  test_apply.py  test_catalog.py  test_commutativity.py  test_html_overlay.py  test_originating_note_id.py  test_phase1_hash_snapshot.py  test_types.py  test_validate.py
open_edit/tests/test_qc/: test_black_frames.py  test_gate.py  test_silence.py  test_thumbnail.py
open_edit/tests/test_render/: test_cache.py  test_emitter.py  test_golden_fixtures.py  test_ingest.py  test_orchestrator.py  test_orchestrator_timeout.py  test_profiles.py  test_validators.py
open_edit/tests/test_sandbox/: test_render_sandbox.py
open_edit/tests/test_skill/: test_motion_graphics_templated.py  test_music_selector.py  test_narrative_analyzer.py  test_sfx_placer.py  test_silence_cutter.py
open_edit/tests/test_storage/: __init__.py  test_assets.py  test_assets_alignment.py  test_edit_graph.py  test_job_lock.py  test_notes.py  test_phase1_integrity.py  test_render_snapshots.py  test_transcription.py
open_edit/tests/test_style/: test_aggregate.py  test_notes_archive.py  test_retrieve.py  test_style_inject.py  test_taste_events.py
pyagent-kdenlive-guide/phase3_pyagent_core/: DESIGN.md  Makefile  README.md  __init__.py  __main__.py  catalog_slice.py  extension.ts  phase3_types.py  pyproject.toml  runtime.py  system_prompt.md  test_catalog_slice.py  test_extension.py  test_integration.py  test_runtime.py
pyagent-kdenlive-guide/phase3_pyagent_core/tests/: test_creativity_level.py  test_golden_io.py  test_pyagent_add_marker.py  test_pyagent_get_pending_notes.py  test_pyagent_get_style_profile.py  test_pyagent_run_python.py  test_pyagent_set_pinned_value.py  test_repointed_wrappers.py  test_runtime.py  test_tools.py
pyagent-kdenlive-guide/phase3_pyagent_core/tools/: __init__.py  _phase4.py  bin.py  catalog.py  clips.py  clips_edit.py  effects.py  groups.py  keyframes.py  markers.py  project.py  render_qc.py  track_effects.py  transitions.py
pyagent-kdenlive-guide/phase4_chat_ui/: Makefile  README.md  __init__.py  __main__.py  agent_adapters.py  app.py  pi_client.py  pyproject.toml  secure_context.py  session.py  state.py  test_agent_adapters.py  test_app.py  test_notes_sidebar_render.py  test_notes_ws_broadcast.py  test_pi_client.py  test_session.py  test_state.py  test_task4_apps.py  test_task5_ui.py  test_watcher.py  test_websocket.py  types.py  uploads.py  watcher.py  ws.py
pyagent-kdenlive-guide/phase5_dbus_sync/: Makefile  README.md  __init__.py  __main__.py  dbus_client.py  kdenlive_state.py  live_sync.py  notifier.py  pyproject.toml  test_apply_cli.py  test_dbus_client.py  test_kdenlive_state.py  test_live_sync.py  test_notifier.py
pyagent-kdenlive-guide/phase6_render_qc/: Makefile  README.md  __init__.py  pyproject.toml  test_e2e_pipeline.py  test_parsers.py  test_render_integration.py
pyagent-kdenlive-guide/phase7_real_session/: Makefile  README.md  __init__.py  chat_ui.py  dbus_probe.py  e2e.py  kdenlive.py  pyproject.toml  skipif.py  skipif_helpers.py  ws_client.py  xvfb.py
(+398 files in other folders)
