[project]
name = "open_edit"
version = "1.2.0"
description = "AI-native video editing platform — IR, asset store, sandboxed agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "lxml>=5.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "anthropic>=0.39",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
]
openai = ["openai>=1.30"]
whisper = [
    "faster-whisper>=1.0.0",
]
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "anthropic>=0.39",
    "python-multipart>=0.0.9",
]

[project.scripts]
open_edit = "open_edit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["open_edit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
